--- a/vs1m.pro/layouts/index.html
+++ b/vs1m.pro/layouts/index.html
@@ -33,22 +33,21 @@
                 <div class="aboutme">
                     <p>
                         <h2> Hello World! </h2>
-                        I am Ville, known online as Vsimpro (or Vs1m for short). <br>
-                        I am a cybersecurity enthusiast and hobbyist developer, who loves to explore the digital frontier. 
+                        I am Ville, known online as <strong>Vsimpro</strong> (or <strong>Vs1m</strong> for short). <br>
+                        I'm a cybersecurity enthusiast and developer with a deep interest in automation, security research, and all things tech. 
                         <br><br>
-                        By day, I wear the hat of a cybersecurity-expert, and by night I craft automation tools and projects. I use a suite of languages, but my first love is Python. As a nerd at heart, I'm currently pursuing both BBA and BSc in Computer Science, balancing studies with my passion for building useful tech & tools. This website is the hub for my projects and thoughts to inspire all the fellow enthusiasts — or at the very least entertain you with my misadventures.
+                        By day, I work in cybersecurity, and by night, I build tools, experiment with new technologies, and refine my coding skills. While I use a suite of languages, but my first love is Python. As a nerd at heart, I'm currently pursuing both BBA and BSc in Computer Science, balancing studies with my passion for building useful tech & tools. This website is the hub for my projects and thoughts to inspire all the fellow enthusiasts — or at the very least entertain you with my misadventures.
                         <br><br>
                         Want to chitchat, or collab? You can find me here:
                         <ul>
-                            <li>Discord &nbsp&nbsp&nbsp : Vs1m / Vsimpro</li> 
-                            <li>Twitter/x  &nbsp : x.com/Vsimpro</li>
-                            <li>Github  &nbsp&nbsp&nbsp&nbsp : github.com/Vsimpro</li>
+                            <li>Discord &nbsp&nbsp&nbsp : <span style="user-select:all">Vs1m</span> / <span style="user-select:all">Vsimpro</span></li> 
+                            <li>Twitter/x  &nbsp : <a target="_blank" href="https://x.com/Vsimpro" style="text-decoration: underline;">x.com/Vsimpro</a></li>
+                            <li>Github  &nbsp&nbsp&nbsp&nbsp : <a target="_blank" href="https://github.com/Vsimpro" style="text-decoration: underline;">github.com/Vsimpro</a></li>
                         </ul>
                     </p>
                 </div>
                 <div class="aboutme-pic">
                     <img src="/images/profile.jpg" width="256">
-            
                 </div>
             </div>
 
@@ -82,232 +81,3 @@
     
 </body>
 </html>
-
-
-<style>
-
-:root {
-    --jet-darker: #181818;
-    --jet-dark  : #2D2D2D;
-    --jet-grey  : #383839;
-    --davy-grey : #505051;
-    --dim-grey  : #757575;
-    --grey-white: #ddd2c1;
-    --off-white : #f2f0ec;
-    --white     : #ebebeb;
-    --sunglow   : #ffcc66;
-    --tangerine : #f89057;
-    --pink      : #f3767a;
-    --red       : #fa4e4e;
-    --purple    : #CC98CD;
-    --green     : #98cd99;
-    --blue      : #6798cc;
-    --teal      : #66cdcd; 
-}
-
-* {
-    font-family: monospace;
-}
-
-body {
-    overflow: hidden;
-    color: var(--jet-dark);
-
-    background-color: var(--jet-dark);
-    background-image: radial-gradient(
-        circle, 
-        var(--davy-grey)
-        1px, 
-        transparent 1px
-    );
-    
-    background-size: 18px 18px;
-}
-
-.body-grid {
-    user-select: none;
-    margin-top: 2%;
-
-    display: grid;
-    grid-template-columns: 25dvw 65dvw 5dvw;
-}
-
-.main {
-    width: 800px;
-
-    margin:   0;
-    padding: 3%;
-    padding-top: 1%;
-
-    border-radius: 4px;
-    border: 1px solid var(--dim-grey);
-
-    box-shadow: 
-        6px  4px   0px var(--jet-darker),
-        10px 8px   4px var(--jet-darker),
-        12px 10px 12px var(--jet-darker);
-
-    background-color: var(--off-white);
-    overflow: hidden;
-}
-
-.aboutme-grid {
-    display: grid;
-    grid-template-columns: 60% 20%;
-}
-
-.aboutme {
-    font-size: 14px;
-    margin-top: 5%;
-}
-
-.aboutme-pic {
-    width: 50%;
-    margin: auto;
-
-    padding-left: 70px;
-}
-
-.blog-grid {
-    
-    padding: 0;
-    margin:  0;
-
-    margin-left: -5px;
-
-    display: grid;
-
-    gap: 10px;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-a {
-    color: var(--jet-darker);
-    text-decoration: none;
-}
-
-
-.blog-card {
-    user-select: none;
-    padding: 0;
-    margin:  0;
-
-    padding-left: 5%;
-    padding-bottom: 5%;
-
-    border-radius: 4px;
-    border: 1px solid var(--jet-dark);
-
-    background-color: var(--teal);
-    box-shadow: 2px 2px 0px var(--dim-grey);
-}
-
-.blog-card:hover {
-    background-color: var(--blue);
-    box-shadow: 
-       -2px -2px 2px var(--grey-white),
-        3px  3px 2px var(--dim-grey);
-}
-
-.call2action {
-    padding: 5px;
-
-    border-radius: 3px;
-    font-weight: bold;
-
-    border: 1px solid;
-
-    background-color: var(--off-white);
-}
-
-
-.nav-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    justify-content: right;
-}
-
-.nav-li {
-    margin-right: 5px;
-
-    background-color: var(--pink);
-    padding: 10px;
-
-    border-radius: 2px;
-    border: 1px solid var(--jet-darker);
-
-    box-shadow: 3px 2px 0px var(--davy-grey);
-}
-
-.nav-li:hover {
-    border: 1px solid var(--jet-grey);
-    background-color: var(--tangerine);
-    box-shadow: 4px 3px 0px var(--davy-grey);
-}
-
-nav {
-    width: 100%;
-    padding: 10px 0;
-}
-
-img {
-    margin: 0;
-    padding: 0;
-
-    border-radius: 2px;
-
-    border:     2px solid var(--jet-darker);
-    box-shadow: 8px 8px var(--davy-grey);
-}
-
-@media all and (orientation:portrait) {
-
-    .body-grid {
-        display: inline-block;
-    }
-
-    .aboutme-grid {
-        display: inline-block;
-    }
-
-    
-    .main {
-        width: 92dvw;
-
-        margin:   0;
-        padding: 3%;
-        padding-top: 1%;
-
-        border-radius: 4px;
-        border: 1px solid var(--dim-grey);
-
-        box-shadow: 
-            6px  4px   0px var(--jet-darker),
-            10px 8px   4px var(--jet-darker),
-            12px 10px 12px var(--jet-darker);
-
-        background-color: var(--off-white);
-        overflow: hidden;
-    }
-
-}
-
-@media (orientation:portrait) and (max-width: 780px) {
-    .special {
-        display: none;
-    }
-
-    nav {
-        display: none;
-    }
-
-    .nav-li {
-        font-size: 12px;
-        height: 20px;
-    }
-
-}
-
-</style>
