--- a/vs1m.pro/public/css/style.css
+++ b/vs1m.pro/public/css/style.css
@@ -17,13 +17,49 @@
     --teal      : #66cdcd; 
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Jost&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+.space-mono-regular {
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.space-mono-bold {
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    font-style: normal;
+}
+  
+.space-mono-regular-italic {
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: italic;
+}
+  
+.space-mono-bold-italic {
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    font-style: italic;
+}
+
 * {
-    font-family: monospace;
+    font-size: 15px;
+    font-family: "Space Mono", monospace;
+    
+}
+
+p {
+    line-height:    1.5;
 }
 
 body {
-    overflow: hidden;
-    color: var(--jet-dark);
+    overflow: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    color: black;
 
     background-color: var(--jet-dark);
     background-image: radial-gradient(
@@ -34,11 +70,16 @@ body {
     );
     
     background-size: 18px 18px;
+
+}
+
+
+body::-webkit-scrollbar {
+    display: none;  
 }
 
 .main {
-    user-select: none;
-    width: 800px;
+    max-width: 900px;
 
     margin:   0;
     padding: 3%;
@@ -57,7 +98,7 @@ body {
 
     margin-top: 2%;
 
-    margin-left: auto;
+    margin-left:  auto;
     margin-right: auto;
 }
 
@@ -69,6 +110,7 @@ body {
 }
 
 .aboutme {
+    user-select: none;
     font-size: 14px;
     margin-top: 5%;
     grid-area: aboutme;
@@ -176,6 +218,53 @@ img {
     box-shadow: 8px 8px var(--davy-grey);
 }
 
+.highlight {
+    max-width: 700px;
+    margin: auto;
+    box-shadow: 6px 6px var(--davy-grey);
+}
+
+pre {
+    padding: 1%;
+    color: var(--off-white);
+    background-color: var(--jet-grey);
+}
+
+code {
+    max-width: 800px;
+    
+    color: var(--off-white);
+    background-color: var(--jet-grey);
+
+    padding: 1px;
+    padding-left: 2px;
+    padding-right: 2px;
+
+}
+
+aside {
+    display: none;
+}
+
+.back {
+    padding: 1%;
+    border-radius: 4px;
+
+    color: var(--off-white);
+    text-shadow: 0px 1px 3px var(--jet-darker);
+    background-color: var(--pink);
+}
+
+.back:hover {
+    box-shadow: 1px 1px 5px var(--jet-dark);
+    background-color: var(--tangerine);
+}
+
+.blog-img {
+    align-self:   center;
+    justify-self: center;
+}
+
 @media all and (orientation:portrait) {
 
     a {
@@ -207,7 +296,7 @@ img {
     .main {
         width: 92dvw;
 
-        margin:   0;
+        margin:   auto;
         padding: 3%;
         padding-top: 1%;
 
@@ -228,6 +317,10 @@ img {
         width: auto;
         padding: 0;
     }
+
+    .call2action, .title {
+        color: var(--jet-darker);
+    } 
 
 }
 
@@ -266,3 +359,4 @@ img {
         box-shadow: none;
     }
 }
+
