--- a/vs1m.pro/public/css/style.css
+++ b/vs1m.pro/public/css/style.css
@@ -52,6 +52,10 @@
 
 p {
     line-height:    1.5;
+    max-width: 800px;
+    
+    margin-left:  auto;
+    margin-right: auto;
 }
 
 body {
@@ -94,6 +98,7 @@ body::-webkit-scrollbar {
         12px 10px 12px var(--jet-darker);
 
     background-color: var(--off-white);
+
     overflow: hidden;
 
     margin-top: 2%;
@@ -139,9 +144,12 @@ body::-webkit-scrollbar {
 
 a {
     color: var(--jet-darker);
-    text-decoration: none;
+    text-decoration: underline;
 }
 
+a:hover {
+    font-weight: bolder;
+}
 
 .blog-card {
     user-select: none;
@@ -256,7 +264,7 @@ aside {
 }
 
 .back:hover {
-    box-shadow: 1px 1px 5px var(--jet-dark);
+
     background-color: var(--tangerine);
 }
 
@@ -357,6 +365,15 @@ aside {
 
     .blog-card:hover {
         box-shadow: none;
+    }
+
+    img {
+        width:  95vw;
+
+    }
+
+    code {
+        background-color: var(--jet-darker);
     }
 }
 
